--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,13 @@
     <string name="menu_label_home">Home</string>
     <string name="menu_label_chat">Chat</string>
     <string name="menu_label_lists">Lists</string>
+
+    <string name="name">Name</string>
+    <string name="username">Username</string>
+    <string name="do_not_disturb">Do Not Disturb</string>
+    <string name="group_name">Group Name</string>
+    <string name="group_code">Group Code</string>
+    <string name="log_out">Log Out</string>
+    <string name="housemates">Housemates</string>
+    <string name="log_out_successful">Log Out Successful</string>
 </resources>
